+UPDATE: module name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "imaginacms/iplan",
+    "name": "imagina/iplan-module",
     "description": "",
     "type": "asgard-module",
     "license": "MIT",
