--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Modules\\Iplan\\Providers\\IplansServiceProvider"
+                "Modules\\Iplan\\Providers\\IplanServiceProvider"
             ],
             "aliases": {
 
