--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^8.1",
         "composer/installers": "~1.0",
-        "imagina/core-module": "^10.0"
+        "imagina/core-module": "v10.x-dev"
     },
     "require-dev": {
         "orchestra/testbench": "^8.5",
